Omit excess "Binary file ... matches"

Problem reported in: http://bugs.gnu.org/22461
* src/grep.c (grep): Don't report "Binary file ... matches"
merely because the file contained both matches and binary data.
Insist that the binary data contained a match.
* tests/null-byte: Add a test for this.